--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 }
 
 body {
+  visibility: hidden;
   background: #010103;
   font-family: "General Sans", sans-serif;
 }
@@ -61,7 +62,7 @@ body {
   }
 
   .tech-logo {
-    @apply w-14 h-14 rounded-md p-2 bg-neutral-100 bg-opacity-10 backdrop-filter backdrop-blur-lg flex justify-center items-center;
+    @apply w-12 h-12 rounded-md p-2 bg-neutral-100 bg-opacity-10 backdrop-filter backdrop-blur-lg flex justify-center items-center;
   }
 
   /*  work experience section */
